# caffe2-opencv-ndkcamera

./: README  README.md  build.gradle  local.properties  settings.gradle
texture-view/: build.gradle
texture-view/src/main/cpp/: CMakeLists.txt  android_main.cpp  classes.h
texture-view/src/main/cpp/camera/: camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  camera_utils.cpp  image_reader.cpp  image_reader.h
texture-view/src/main/java/com/sample/textureview/: ViewActivity.java
texture-view/src/main/res/layout/: activity_main.xml
